Fixed unaligned text

--- a/frontend/tribalwarsplayerinfo/src/app/player-search/player-search.component.css
+++ b/frontend/tribalwarsplayerinfo/src/app/player-search/player-search.component.css
@@ -41,6 +41,7 @@ input{
     border-radius: 3px;
     width: calc(100% - 10px);
     padding: 5px;
+    text-align: center;
 }
 .item:hover i, input:hover::placeholder {
     color: #cc7a00;
